# home-ops-agent

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  architecture.excalidraw  blog-post.md  pyproject.toml
.github/workflows/: build.yaml
src/home_ops_agent/: __init__.py  config.py  database.py  main.py
src/home_ops_agent/agent/: core.py  costs.py  memory.py  models.py  prompts.py  providers.py  skills.py
src/home_ops_agent/api/: chat.py  costs.py  settings.py  skills.py  status.py
src/home_ops_agent/auth/: credentials.py  oauth.py  session.py
src/home_ops_agent/mcp/: bridge.py  client.py
src/home_ops_agent/static/: app.js  index.html  style.css
src/home_ops_agent/workers/: alert_subscriber.py  pr_fix.py  pr_merge.py  pr_monitor.py
tests/: conftest.py  test_agent.py  test_alert_subscriber.py  test_api_settings.py  test_api_skills.py  test_api_status.py  test_config.py  test_memory.py  test_models.py  test_openai_backend.py  test_pr_fix.py  test_pr_merge.py  test_pr_monitor.py  test_prompts.py  test_providers.py  test_session.py  test_skills.py  test_tools_github.py  test_tools_kubernetes.py  test_tools_ntfy.py
web/: package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: app-shell.tsx  app-sidebar.tsx  sidebar.tsx  slide-panel.tsx  task-detail.tsx
web/src/hooks/: use-costs.ts  use-history.ts  use-memories.ts  use-prompts.ts  use-settings.ts  use-skills.ts  use-websocket.ts
web/src/lib/: api.ts  constants.ts  types.ts  utils.ts
web/src/providers/: websocket-provider.tsx
(+38 files in other folders)
